# windspire

./: .gitignore  DEPLOYMENT.md  cleanup-tags.sh  setup-hooks.sh
githooks/: commit-msg  (+1 more)
windspire_backend/: .dockerignore  .env  .env.example  .funcignore  Cargo.toml  Dockerfile  README.md  RUST_2021_MIGRATION.md  SQLX_OFFLINE_MODE.md  host.json  local.settings.json
windspire_backend/api/: boats.http  countries.http  function.json  users.http
windspire_backend/docs/: data_model.erd.json
windspire_backend/migrations/: 0001_added_table_countries.sql  0002_users_table_and_test_users.sql  0003_countries_index_iso_alpha2.down.sql  0003_countries_index_iso_alpha2.sql  0004_countries_index_iso_alpha3.down.sql  0004_countries_index_iso_alpha3.sql  0005_added_boats_table.down.sql  0005_added_boats_table.sql  0006_add_oauth_fields_to_users.down.sql  0006_add_oauth_fields_to_users.sql  0007_create_rbac_tables.down.sql  0007_create_rbac_tables.sql  0008_create_boat_owners_table.sql
windspire_backend/src/: lib.rs  main.rs
windspire_backend/src/application/: mod.rs  state.rs
windspire_backend/src/application/approuter/: mod.rs
windspire_backend/src/application/commands/: create_user_boat_command.rs  delete_boat_command.rs  delete_country_command.rs  delete_user_command.rs  insert_boat_command.rs  insert_country_command.rs  insert_user_command.rs  mod.rs  update_boat_command.rs  update_country_command.rs  update_user_command.rs
windspire_backend/src/application/config/: mod.rs
windspire_backend/src/application/handlers/: auth_handlers.rs  boat_owner_handlers.rs  mod.rs
windspire_backend/src/application/middleware/: auth_middleware.rs  rbac_middleware.rs
windspire_backend/src/application/queries/: get_boats_query.rs  get_countries_query.rs  get_country_by_code_query.rs  get_country_by_id_query.rs  get_my_boats_query.rs  get_user_by_id_query.rs  get_user_profile_query.rs  get_users_query.rs  mod.rs
windspire_backend/src/application/services/: firebase_service.rs  jwt_service.rs  mod.rs  oauth_service.rs
windspire_backend/src/application/usecase/: get_all_users_usecase.rs  mod.rs
windspire_backend/src/domain/: country_repository.rs  mod.rs  models.rs  usecase.rs  user_repository.rs
windspire_backend/src/domain/interface/: boat_repository.rs  country_repository.rs  mod.rs  user_repository.rs
windspire_backend/src/domain/models/: auth.rs  boat.rs  boat_owner.rs  country.rs  mod.rs  rbac.rs  user.rs
windspire_backend/src/domain/repositories/: boat_owner_repository.rs  mod.rs  permission_repository.rs  role_repository.rs  user_repository.rs
windspire_backend/src/infrastructure/: user_repository.rs
windspire_backend/src/infrastructure/repositories/: country_repository.rs  mod.rs  sqlx_boat_repository.rs  sqlx_country_repository.rs  sqlx_permission_repository.rs  sqlx_role_repository.rs  sqlx_user_repository.rs
windspire_backend/src/presentation/: user_handler.rs
(+100 files in other folders)
