[package]
name = "windspire_backend"
version = "0.1.0"
edition = "2024"
default-run = "windspire_backend"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",    # Changed from tls-native-tls to avoid OpenSSL vulnerabilities
    "macros",
    "uuid",
    "chrono",
], default-features = false } # Exclude MySQL and other unused features
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20" # Updated from 0.3.19 to fix RUSTSEC-2025-0055
uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.11.1"
# Authentication and authorization dependencies
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22.1"

# Security vulnerability fixes
[dependencies.hashbrown]
version = ">=0.15.1" # Fix RUSTSEC-2024-0402

[dependencies.idna]
version = ">=1.0.0" # Fix RUSTSEC-2024-0421
